Fix double border items

--- a/components/toggleButton/toggleItem.css
+++ b/components/toggleButton/toggleItem.css
@@ -1,6 +1,7 @@
 .ui-toggle-button__item {
   background-color: var(--tx-generic-color-blank);
   border: var(--tx-toggle-button-item-border-size) var(--tx-toggle-button-item-border-style) var(--tx-toggle-button-item-border-color);
+  border-right-width: 0;
   color: var(--tx-generic-color-primary);
   display: inline-block;
   font-family: var(--tx-generic-font-secondary-font-family), var(--tx-generic-font-secondary-generic-family);
@@ -14,13 +15,12 @@
 
 .ui-toggle-button__item:first-child {
   border-bottom-left-radius: var(--tx-toggle-button-item-border-radius);
-  border-right: 0;
   border-top-left-radius: var(--tx-toggle-button-item-border-radius);
 }
 
 .ui-toggle-button__item:last-child {
   border-bottom-right-radius: var(--tx-toggle-button-item-border-radius);
-  border-left: 0;
+  border-right-width: var(--tx-toggle-button-item-border-size);
   border-top-right-radius: var(--tx-toggle-button-item-border-radius);
 }
 
